k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulse-api
spec:
  selector:
    app: pulse-api
  ports:
    - port: 80
      targetPort: 5000
